Denora Version 1.4.0
--------------------
Provided by Denora Team <dev@denorastats.org> - 2008
01/11 A Detection of Windows Vista and Windows Server 2008        [ #00]
01/10 A Added persistent channel mode support for nefarious       [#466]
01/09 U Updated GeoIP.dat                                         [ #00]
01/22 F Handle user mode +h vhost correctly in nefarious          [#463]
01/14 F Fixed sjoin not handling unrealircd nickchar nicks well   [#468]
01/11 F Several inspircd11 fixes                                  [ #00]
01/09 F Fixed p10 account not populated to sql on N message       [#465]
01/09 F Give denorarc more time for the stats process to start    [#469]

Provided by nenolod - 2008
01/09 A State-machine driven UID generator for TS6 ircds          [#431]

Provided by Denora Team <dev@denorastats.org> - 2007
12/02 A New example config file (english)                         [ #00]
11/26 A New HTML template which now validates against 4.01 strict [ #00]
11/18 A Added rejoin lock time support for inspircd               [ #00]
11/18 A Added Invite Exception support to inspircd module         [ #00]
08/17 A Admins passwords are now hidden in debug messages         [#414]
08/16 A Added recompile option to Makefile, make recompile        [ #00]
08/16 A Added new protocol ScaryNet                               [ #00]
08/13 A Added XMLRPC documentation                                [#407]
08/12 A Added option to track only +r users on chanstats          [ #00]
08/10 A New optional token on connect block for quitprefix        [#404]
07/25 A Admin passwords are now MD5-encrypted in SQL              [ #00]
07/18 A Moved deprecated ircd protocol files out of the way       [ #00]
07/18 A Made the ./Config process more clear about MySQL support  [ #00]
02/28 A Added swhois support to nefarious                         [ #00]
02/28 A Added P10 account support                                 [ #00]