@@ -9,9 +9,13 @@ VERSION_MAJOR="1"
 VERSION_MINOR="4"
 VERSION_PATCH="0"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="151"
+VERSION_BUILD="152"
 
 # $Log$
+#
+# BUILD : 1.4.0.152 (SVN)
+# BUGS  : 479,462
+# NOTES : Fixed local kill handling on P10 ircds. Fixed incorrect non-western characters in html output.
 #
 # BUILD : 1.4.0.151 (SVN)
 # BUGS  : 462
